# fhir_based_gen_ai_research

./: README.md  docker-compose.yml  pyproject.toml  run-neo4j.sh
fhir_rag/: fhir_function_calling.ipynb  fhir_graphrag.ipynb  fhir_rag.ipynb  ragas.ipynb
fhir_rag/evaluation/: Beatris270_Bogan287_5b3645de-a2d0-d016-0839-bab3757c4c58.ipynb  evaluation_data_model_contract.yml  evaluation_data_model_sample.json
fhir_rag/fhir_data/stanford_llm_on_fhir/: README.md
fhir_rag/ingestion/: ingestion_graphKB.ipynb
fhir_rag/ingestion/helpers/: FHIR_GRAPHS.ipynb  FHIR_to_graph.py  FHIR_to_string.py
fhir_rag/prompts/: simple_prompt.py  stanform_prompt.py
fhir_rag/questions/: questions.py
fhir_rag/utils/: Untitled.ipynb  tokens.py
