[tool.poetry]
name = "fhir-rag"
version = "0.1.0"
description = ""
authors = ["baptvit <jvrbaptista@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
lab = "^8.2"
sentence-transformers = "^3.1.0"
langchain = "^0.3.0"
neo4j = "^5.24.0"
langchain-google-vertexai = "^2.0.3"
langchain-community = "^0.3.1"
tiktoken = "^0.7.0"
langchain-core = "^0.3.8"
langfuse = "^2.51.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
